# SpaceUX

./: .clang-format  .clang-tidy  .editorconfig  .envrc  .gitignore  .prettierignore  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_LICENSES.md  eslint.config.js  flake.nix  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
docs/: README.md  install.md  uninstall.md  usage.md
extensions/function/example-launch/: index.js  manifest.json
extensions/function/org.spaceux.freecad/: .gitignore  README.md  index.js  manifest.json
extensions/nav-style/org.spaceux.twist-press-lift/: manifest.json
extensions/shape/org.spaceux.planets/: index.js  manifest.json
nix/: module.nix  package-lock.json  package.nix  spaceux-launcher.sh
plugins/example-launch/: .gitignore  index.js  manifest.json
scripts/: atspi-smoke.py  atspi-smoke.sh  copy-font-licenses.mjs  install.sh  second-launch-smoke.sh  uninstall.sh
src/core/: action-path.ts  button-conflicts.ts  catalog-filter.ts  context-model.ts  desktop-conflicts.ts  desktop-model.ts  gesture-collision.ts  icon.ts  menu-edit.ts  menu-nav.ts  nav-input.ts  nav-model.ts  overlay-scene.ts  overlay-svg.ts  overlay-theme.ts  pie-geometry.ts  pie-path.ts  pie-svg.ts  pie-theme.css  plugin-features.ts  plugin-model.ts  svg-flatten.ts  typography.css
src/core-host/: core-service-builder.ts  core-state.ts  dbus-server.ts  extra-core-service.ts  live-preview.ts  main.ts  pie-runtime.ts  sni-tray.ts
src/daemon/: Makefile  config.h  daemon.c  inject.h  inject_linux.c  input.h  input_linux.c  ipc.h  ipc_unix.c  kernel_input.c  kernel_input.h  led.h  led_linux.c  platform.h  platform_linux.c  protocol.c  protocol.h  socket.c  socket.h
src/editor/: App.module.scss  App.tsx  confirm-delete-node.ts  index.html  index.tsx  style.css  tooltips.ts  vite-env.d.ts
src/editor-qt/: .clang-format  CMakeLists.txt  EditorClient.cpp  EditorClient.h  NativeDialogs.cpp  NativeDialogs.h  NativeTextMenu.cpp  NativeTextMenu.h  SingleInstance.cpp  SingleInstance.h  main.cpp
src/editor-qt/qml/: ActionConfigForm.qml  ActionField.qml  Appearance.qml  Button.qml  CommandPalette.qml  ConfigEditor.qml  ConfirmDialog.qml  ConflictMark.qml  DesktopPage.qml  DeviceBar.qml  DualRange.qml  EyeToggle.qml  FontControl.qml  GestureInputList.qml  HoverHint.qml  Main.qml  MenuSettingsSection.qml  NavInputRow.qml  NavigationSection.qml  NodeTree.qml  PanelFlickable.qml  PiePreview.qml  PluginBadge.qml  PluginSourcePanel.qml  PluginsSection.qml  Properties.qml  RowButton.qml  ScrollBar.qml  Section.qml  SegmentedControl.qml  Select.qml  SettingsPage.qml  SettingsSection.qml  Slider.qml  SliderRow.qml  SplitHandle.qml  TabBar.qml  TextContextMenu.qml  Theme.qml  ToastStack.qml  (+2 more)
src/editor/components/: ActionField.tsx  ActiveWorkbenchHeader.module.scss  ActiveWorkbenchHeader.tsx  CenterFieldSettings.tsx  CommandPalette.module.scss  CommandPalette.tsx  ConfigEditor.tsx  ConfirmDialog.module.scss  ConfirmDialog.tsx  DeviceStatus.module.scss  DeviceStatus.tsx  DualRange.module.scss  DualRange.tsx  FreecadBridgeInstaller.module.scss  FreecadBridgeInstaller.tsx  FreecadSourceControls.module.scss  FreecadSourceControls.tsx  GestureInputList.tsx  LiveToggle.module.scss  LiveToggle.tsx  MenuList.module.scss  MenuList.tsx  MenuPreview.module.scss  MenuPreview.tsx  MenuSettings.tsx  MenuShapeSelect.tsx  Modal.module.scss  Modal.tsx  NavInputRow.tsx  (+36 more)
src/main/: action-icon.ts  action-path-check.ts  app-core-service.ts  app-ipc.ts  app-settings.ts  atomic-write.ts  autostart.ts  compositor-ipc.ts  context-loader.ts  context-ops.ts  core-service.ts  cursor-source.ts  daemon-client.ts  default-menu.ts  desktop-actions.ts  desktop-env.ts  desktop-interpreter.ts  editor-core-service.ts  editor-ipc.ts  editor-preload.ts  editor-settings.ts  editor-window.ts  freecad-bridge.ts  grab-intent.ts  icon-encode.ts  icon-theme.ts  index.ts  keysym-icons.ts  kwin-cursor.ts  menu-loader.ts  menu-watcher.ts  menu-writer.ts  overlay-client.ts  overlay-mode.ts  plugin-hash.ts  plugin-install-ops.ts  plugin-installer.ts  plugin-loader.ts  plugin-runtime.ts  plugin-state.ts  (+10 more)
src/overlay/: CMakeLists.txt  OverlayController.cpp  OverlayController.h  main.cpp
src/overlay/dbus/: org.spaceux.Overlay1.xml
src/overlay/qml/: Overlay.qml
src/qt-shared/: .clang-format  CMakeLists.txt  PieView.cpp  PieView.h  ScenePie.qml
src/renderer/: App.tsx  PieMenu.tsx  index.html  index.tsx  style.css
src/shared/: bridge.ts  context-ui.ts  core-contract.ts  desktop-settings.ts  desktop-ui.ts  errors.ts  icon.ts  input-settings.ts  ipc.ts  launch.ts  menu.ts  nav-ui.ts  navigation-presets.ts  official-plugins.ts  pie-appearance.ts  pie-scene.ts  plugin-key.ts  plugin-types.ts  plugin-ui.ts  protocol.ts  shape-plugin-api.ts  util.ts  with-timeout.ts
tests/: action-fill-precedence.test.ts  action-icon-fill.test.ts  action-icon-keycombo.test.ts  action-icon.test.ts  action-path-check.test.ts  action-path.test.ts  activation-collision.test.ts  app-settings.test.ts  atomic-write.test.ts  autostart.test.ts  button-conflicts.test.ts  cancel-label.test.ts  catalog-filter.test.ts  confirm-delete-node.test.ts  context-loader.test.ts  context-model.test.ts  core-contract.test.ts  core-dbus-server.test.ts  core-single-instance.test.ts  cursor-source.test.ts  daemon-client.test.ts  default-menu.test.ts  desktop-actions.test.ts  desktop-backend.test.ts  desktop-conflicts.test.ts  desktop-env.test.ts  desktop-interpreter.test.ts  desktop-model.test.ts  desktop-settings.test.ts  editor-settings.test.ts  editor-state.test.ts  freecad-bridge.test.ts  gesture-collision.test.ts  grab-arbiter.test.ts  icon-theme-base-dir-union.test.ts  icon-theme-base-dir.test.ts  icon-theme-discover.test.ts  icon-theme.test.ts  icon.test.ts  input-settings.test.ts  (+51 more)
tests/daemon/: check.h  parse_command.c
(+50 files in other folders)
